scribble-test/src/test/resources/good/misc/imports/Import05.scr
//Raymond@HZHL2 ~/code/python/scribble-tools
//$ PYTHONPATH='lib/:bin/' python src/scribble/Main.py -ip test/ test/base/impourt/Import5.scr

module good.misc.imports.Import05;

import good.misc.imports.pack1.Pack05;
import good.misc.imports.pack2.Pack05;

